fix: change route in sensor type handler
