# services/api-gateway/handlers/sensortype.go
@@ -30,7 +30,7 @@ func NewSensorTypeHandler(client pb.SensorServiceClient) *SensorTypeHandler {
 // @Success 200 {array} string
 // @Failure 401 {string} string "Unauthorized"
 // @Failure 500 {object} map[string]string
-// @Router /api/sensortypes [get]
+// @Router /api/sensor-types [get]
 func (h *SensorTypeHandler) ListSensorTypes(w http.ResponseWriter, r *http.Request) {
 	ctx, cancel := context.WithTimeout(r.Context(), 10*time.Second)
 	defer cancel()
@@ -58,7 +58,7 @@ func (h *SensorTypeHandler) ListSensorTypes(w http.ResponseWriter, r *http.Reque
 // @Failure 401 {string} string "Unauthorized"
 // @Failure 404 {object} map[string]string
 // @Failure 500 {object} map[string]string
-// @Router /api/sensortypes/{id} [get]
+// @Router /api/sensor-types/{id} [get]
 func (h *SensorTypeHandler) GetSensorType(w http.ResponseWriter, r *http.Request) {
 	ctx, cancel := context.WithTimeout(r.Context(), 10*time.Second)
 	defer cancel()
@@ -98,7 +98,7 @@ func (h *SensorTypeHandler) GetSensorType(w http.ResponseWriter, r *http.Request
 // @Failure 400 {object} map[string]string
 // @Failure 401 {string} string "Unauthorized"
 // @Failure 500 {object} map[string]string
-// @Router /api/sensortypes [post]
+// @Router /api/sensor-types [post]
 func (h *SensorTypeHandler) CreateSensorType(w http.ResponseWriter, r *http.Request) {
 	ctx, cancel := context.WithTimeout(r.Context(), 10*time.Second)
 	defer cancel()
@@ -140,7 +140,7 @@ func (h *SensorTypeHandler) CreateSensorType(w http.ResponseWriter, r *http.Requ
 // @Failure 401 {string} string "Unauthorized"
 // @Failure 404 {object} map[string]string
 // @Failure 500 {object} map[string]string
-// @Router /api/sensortypes/{id} [put]
+// @Router /api/sensor-types/{id} [put]
 func (h *SensorTypeHandler) UpdateSensorType(w http.ResponseWriter, r *http.Request) {
 	ctx, cancel := context.WithTimeout(r.Context(), 10*time.Second)
 	defer cancel()
@@ -192,7 +192,7 @@ func (h *SensorTypeHandler) UpdateSensorType(w http.ResponseWriter, r *http.Requ
 // @Failure 401 {string} string "Unauthorized"
 // @Failure 404 {object} map[string]string
 // @Failure 500 {object} map[string]string
-// @Router /api/sensortypes/{id} [delete]
+// @Router /api/sensor-types/{id} [delete]
 func (h *SensorTypeHandler) DeleteSensorType(w http.ResponseWriter, r *http.Request) {
 	ctx, cancel := context.WithTimeout(r.Context(), 10*time.Second)
 	defer cancel()
